# elastic-connector

./: Cargo.toml  Connector.toml  README.md  sample-config.yaml  secrets.txt
src/: config.rs  main.rs  sink.rs
